k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: devops-portfolio
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - port: 8080
      targetPort: 8080
