k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: devops-portfolio
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
